--- a/app/views/frontiers/calculate.html.erb
+++ b/app/views/frontiers/calculate.html.erb
@@ -116,7 +116,7 @@ svg.append("text")
     .append("div")
     .style("opacity", 0)
     .attr("class", "tooltip")
-    .style("background-color", "white")
+    .style("background-color", "black")
     .style("border", "solid")
     .style("border-width", "2px")
     .style("border-radius", "5px")
@@ -143,8 +143,8 @@ svg.append("text")
     Tooltip
       .style("opacity", 0)
     d3.select(this)
-      .style("stroke", "#53D5FF")
-      // .style("opacity", 0.8)
+      .style("stroke", "#5445FF")
+      
   }
     
     // Add the points
