--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,15 @@
  /* .navbar-nav { 
             margin-left: auto; 
         }  */
+.container2  {
+  background-color: #39394B;
+  grid-template-columns: auto ;
+  text-align: left;
+  padding: 20px;
+  color: #FFFFFF;
+  
+
+}
 .grid-container {
   display: grid;
   grid-template-columns: 300px auto ;
@@ -14,7 +23,6 @@
   background-color: #1C1B29;
   padding: 20px;
   
-
 
 }
 
