--- a/app/views/cmas/show.html.erb
+++ b/app/views/cmas/show.html.erb
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-1"> <label  class="col-form-label" for="query_name"> Edit Name </label> </div>
         <div class="col-2"> <input class="form-control" type="text" id="query_name" name="query_name" value="<%= @thecma.name %>"> </div>
-        <div class="col-2"> <input type="submit" value="Update Name" class="btn btn-primary"> </div>
+        <div class="col-2"> <input type="submit" value="Update Name" class="btn btn-success"> </div>
       </div>
      </form>
   </div>
@@ -27,9 +27,10 @@
 
 <hr>
 
+<div class = col-8>
 <table class="table table-hover">
  <thead>
-    <tr class="table-info">
+    <tr style = "background-color: #5445FF">
       <th scope="col">Asset Class</th>
       <th scope="col">Expected Return (Arith)</th>
       <th scope="col">Standard Deviation</th>
@@ -42,7 +43,7 @@
   </thead>
    <tbody>
    <% @asset_class.each do |assetclass| %>
-    <tr class = "table-light">
+    <tr>
       <th scope="row"> <%= assetclass.name %> </th>
       <td> <%= (@cma_inputs.where(:cma_id => @thecma.id).where(:asset_class => assetclass.id)[0].exp_ret*100).round(1)%>%</td>
       <td> <%= (@cma_inputs.where(:cma_id => @thecma.id).where(:asset_class => assetclass.id)[0].std_dev*100).round(1) %>%</td>
@@ -63,7 +64,7 @@
       <% end %>
     </tbody>
   </table>
- 
+ </div>
     <form action = "/cma_inputs" method = "get">
             <input type="text" id="cma_id" name="cma_id" value = "<%= @thecma.id %>" hidden>
              <input type="submit" value="Edit Inputs" class="btn btn-success btn-lg"> 
